end of class part 2

--- a/website/site.html
+++ b/website/site.html
@@ -75,16 +75,15 @@
             <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
             <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
             <li class="is-active orbit-slide">
-              <img class="orbit-image" src="http://foundation.zurb.com/sites/docs/assets/img/orbit/01.jpg" alt="Space">
-              <span class="orbit-caption"><p>Vertical aligning of text over image on Orbit Slider</p></span>
+              <img id="6947" class="rte-content-resource-attachment" title="be in.jpg" width="2000" height="206" data-mce-src="https://s3.amazonaws.com/echalk-slate-prod/moxiemanager/temp/4a8e833d-accf-4e74-937f-ff519342be6a/files/be%20in.jpg" src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/27204423-4787-4cb1-83ff-d793e65bf1b7?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&amp;Expires=1790842845&amp;response-content-disposition=attachment%3Bfilename%3D%22be%2520in.jpg%22&amp;response-content-type=image%2Fjpeg&amp;Signature=Y9r5eU9r1LDsBvpC%2FDotWTM2pSk%3D" alt="">
+              <span class="orbit-caption"><p>Business Technology Early College High School</p></span>
             </li>
             <li class="orbit-slide">
               <img class="orbit-image" src="http://foundation.zurb.com/sites/docs/assets/img/orbit/01.jpg" alt="Space">
-              <span class="orbit-caption"><p>Vertical aligning of text over image on Orbit Slider</p></span>
+              <span class="orbit-caption"><p>BTECH STUDENTS AND STAFF</p></span>
             </li>
             <li class="orbit-slide">
-              <img class="orbit-image" src="http://foundation.zurb.com/sites/docs/assets/img/orbit/01.jpg" alt="Space">
-              <span class="orbit-caption"><p>Vertical aligning of text over image on Orbit Slider</p></span>
+              <img class="orbit-image" src="http://www.qcc.cuny.edu/_common/img/logo/NewLogo_FINAL_horiz.jpg" onload="google.aft&amp;&amp;google.aft(this)" width="816" height="206">
             </li>
           </ul>
           <nav class="orbit-bullets">
@@ -155,16 +154,16 @@
     <footer class="footer">
       <div class="row">
         <div class="small-12 columns">
-          <p class="slogan">Finger-lickin' good</p>
+
+          <p class="slogan">Business Technology Early College High School</p>
+          <a href="#">Contact</a>
+          <p class="copywrite">230-17 Hillside Avenue (3rd Floor)</p>
+          <p class="copywrite">Queens Village, NY 11427</p>
+          <p class="copywrite">Phone: 718-217-3613</p>
+
           <p class="links">
-            <a href="#">Home</a>
-            <a href="#">Blog</a>
-            <a href="#">Pricing</a>
-            <a href="#">About</a>
-            <a href="#">Faq</a>
-            <a href="#">Contact</a>
           </p>
-          <p class="copywrite">Copywrite not copypwrite © 2015</p>
+          <p class="copywrite">Copywrite not copypwrite © 2015-2016 eChalk Inc.</p>
         </div>
       </div>
     </footer>
