end of class 11/12016

--- a/website/site.html
+++ b/website/site.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app-nav.css">
     <link rel="stylesheet" href="css/app-orbit.css">
-    <link rel="stylesheet" href="css/app-hover.css">
+    <link rel="stylesheet" href="css/app-calander.css">
     <link rel="stylesheet" href="css/app-footer.css">
   </head>
   <body>
@@ -98,56 +98,223 @@
     <!-- End Orbit -->
 
 
-    <!-- Begin Hover -->
-    <div class="row">
-      <div class="small-4 columns">
+    <!-- Begin Calander -->
+    <div class="row calendar">
+      <div class=" large-10 columns">
 
-        <div class="image-wrapper overlay-fade-in">
+        <table class="calendar">
 
-          <img src="https://tourneau.scene7.com/is/image/tourneau/DEV9900004?hei=450&wid=300&fmt=png-alpha&resMode=bicub&op_sharpen=1" />
+          <thead>
+            <tr>
+              <th width="300">Sun</th>
+              <th width="300">Mon</th>
+              <th width="300">Tue</th>
+              <th width="300">Wed</th>
+              <th width="300">Thu</th>
+              <th width="300">Fri</th>
+              <th width="300">Sat</th>
+            </tr>
+          </thead>
 
-          <div class="image-overlay-content">
-            <h2>.overlay-fade-in</h2>
-            <p class="price">$99.99</p>
-            <a href="#" class="button">Get it</a>
-          </div>
+          <tbody>
+            <tr>
+              <td class="inactive">
+                <div>
+                  <span class="day">30</span>
+                </div>
+              </td>
+              <td class="inactive">
+                <div>
+                  <span class="day">31</span>
+                </div>
+              </td>
+              <td class="inactive">
+                <div>
+                  <span class="day">1</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">2</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">3</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">4</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">5</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div>
+                  <span class="day">6</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">7</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">8</span>
+                  <span class="event yellow">Election Day:BTECH is closed!</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">9</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">10</span>
+                  <span class="event blue">Marking Period 1 Ends</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">11</span>
+                  <span class="event yellow">Veterans Day:Both BTECH and QCC are closed.</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">12</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div>
+                  <span class="day">13</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">14</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">15</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">16</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">17</span>
+                  <span class="event green">Student Lead Confrences!!</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">18</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">19</span>
+                  </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div>
+                  <span class="day">20</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">21</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">22</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">23</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">24</span>
+                  <span class="event yellow">Thanksgiving Recess: BTECH is closed.</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">25</span>
+                  <span class="event yellow">Thanksgiving Recess: BTECH is closed.</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">26</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div>
+                  <span class="day">27</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">28</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">29</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">30</span>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <span class="day">1</span>
+                </div>
+              </td>
+              <td class="inactive">
+                <div>
+                  <span class="day">2</span>
+                </div>
+              </td>
+              <td class="inactive">
+                <div>
+                  <span class="day">3</span>
+                </div>
+              </td>
+            </tr>
+          </tbody>
 
-        </div>
+        </table>
 
       </div>
-      <div class="small-4 columns">
-
-        <div class="image-wrapper overlay-slide-in-left">
-
-          <img src="https://tourneau.scene7.com/is/image/tourneau/ZEN0101011?hei=450&wid=300&fmt=png-alpha&resMode=bicub&op_sharpen=1" />
-
-          <div class="image-overlay-content">
-            <h2>.overlay-slide-in-left</h2>
-            <p class="price">$2319.99</p>
-            <a href="#" class="button">Buy Me</a>
-          </div>
-
-        </div>
-
-      </div>
-      <div class="small-4 columns">
-
-        <div class="image-wrapper overlay-fade-in-new-background">
-
-          <img src="https://tourneau.scene7.com/is/image/tourneau/FRK0100001?hei=450&wid=300&fmt=png-alpha&resMode=bicub&op_sharpen=1" />
-
-          <div class="image-overlay-content">
-            <h2>.overlay-fade-in-new-background</h2>
-            <p class="price">$189,000</p>
-            <a href="#" class="button">Want!</a>
-          </div>
-
-        </div>
-
-      </div>
-
     </div>
-    <!-- End Hover -->
+    <!-- End Calander -->
 
 
     <!-- Begin Footer -->
