--- a/website/site.html
+++ b/website/site.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app-nav.css">
-    <link rel="stylesheet" href="css/app-orbit.css">
-    <link rel="stylesheet" href="css/app-timeline.css">
-    <link rel="stylesheet" href="css/app-calander.css">
-    <link rel="stylesheet" href="css/app-card.css">
+    <link rel="stylesheet" href="css/app-hero.css">
+    <link rel="stylesheet" href="css/app-infocard">
     <link rel="stylesheet" href="css/app-footer.css">
 
   </head>
@@ -70,337 +68,93 @@
     </nav>
     <!-- End Nav -->
 
-    <!-- Begin Orbit -->
-    <div class="row collapse expanded">
-      <div class="small-12 medium-12 large-12 columns">
-        <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-          <ul class="orbit-container">
-            <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-            <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-            <li class="is-active orbit-slide">
-              <img id="6947" class="rte-content-resource-attachment" title="be in.jpg" width="2000" height="206" data-mce-src="https://s3.amazonaws.com/echalk-slate-prod/moxiemanager/temp/4a8e833d-accf-4e74-937f-ff519342be6a/files/be%20in.jpg" src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/27204423-4787-4cb1-83ff-d793e65bf1b7?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&amp;Expires=1790842845&amp;response-content-disposition=attachment%3Bfilename%3D%22be%2520in.jpg%22&amp;response-content-type=image%2Fjpeg&amp;Signature=Y9r5eU9r1LDsBvpC%2FDotWTM2pSk%3D" alt="">
-              <span class="orbit-caption"><p>Business Technology Early College High School</p></span>
-            </li>
-            <li class="orbit-slide">
-              <img class="list-img" src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/33b83e90-4e97-4114-b5d5-a8d059ff8be3?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&amp;Expires=1790877582&amp;response-content-disposition=attachment%3Bfilename%3D%22DSC_6912.jpg%22&amp;response-content-type=image%2Fjpeg&amp;Signature=ICpljfbG6%2FSW2gP4LlD%2BvrU7o1o%3D" width="2000" height="3000"alt="">
-              <span class="orbit-caption"><p>BTECH STUDENTS AND STAFF</p></span>
-            </li>
-            <li class="orbit-slide">
-              <img class="orbit-image" src="http://www.qcc.cuny.edu/_common/img/logo/NewLogo_FINAL_horiz.jpg" onload="google.aft&amp;&amp;google.aft(this)" width="816" height="206">
-            </li>
-          </ul>
-          <nav class="orbit-bullets">
-            <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
-            <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-            <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-            <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <!-- End Orbit -->
-
-    <!--Begin Timeline-->
-    <div class="path-container">
+    <!-- Begin Hero -->
+    <section class="hero">
       <div class="row">
-        <div class="large-12 columns ">
-          <h1> This is a Timeline!</h1>
+        <div class="large-6 large-push-2 columns">
+          <div class="circle-bg quote-1">
+            <p>I found freedom.<br> Losing all hope was freedom.</p>
+          </div>
+        </div>
+        <div class="large-6 large-pull-2 columns">
+          <div class="circle-bg quote-2">
+            <p>It's only after we've lost everything that we're free to do anything.</p>
+          </div>
         </div>
       </div>
-      <div class="row path-item">
-        <div class="large-7 push-5 columns">
-          <div class="circle circle-left "></div>
-        </div>
-        <div class="large-5 pull-7 columns path-text left">
-          <h3>Lorem ipsum dolor sit amet, consectetur</h3>
-          <p>Something that happened in the past or will happen in the future Lorem ipsum dolor sit amet, consectetur adipiscing elit.  a est. Suspendisse potenti. Sc lorem pretium, molestie</p>
-          <a href="#">Show something cool »</a>
-        </div>
-      </div>
-      <div class="row path-item">
-        <div class="large-7 columns">
-          <div class="circle circle-right right"></div>
-        </div>
-        <div class="large-5 columns path-text right">
-          <h3>Lorem ipsum dolor sit amet, consectetur</h3>
-          <p>Something that happened in the past or will happen in the future Lorem ipsum dolor sit amet, consectetur adipiscing elit.  a est. Suspendisse potenti. Sc lorem pretium, molestie</p>
-          <a href="#">Show something cool »</a>
-        </div>
-      </div>
-      <div class="row get-feedback path-item">
-        <div class="large-7 push-5 columns">
-          <div class="circle circle-left"></div>
-        </div>
-        <div class="large-5 pull-7 columns path-text left">
-          <h3>Lorem ipsum dolor sit amet, consectetur</h3>
-          <p>Something that happened in the past or will happen in the future Lorem ipsum dolor sit amet, consectetur adipiscing elit.  a est. Suspendisse potenti. Sc lorem pretium, molestie</p>
-          <a href="#">Show something cool »</a>
-        </div>
-      </div>
-      <div class="row land-job path-item">
-        <div class="large-7 columns">
-          <div class="circle circle-right right"></div>
-        </div>
-        <div class="large-5 columns path-text right">
-          <h3>Lorem ipsum dolor sit amet, consectetur</h3>
-          <p>Something that happened in the past or will happen in the future Lorem ipsum dolor sit amet, consectetur adipiscing elit.  a est. Suspendisse potenti. Sc lorem pretium, molestie</p>
-          <a href="#">Show something cool »</a>
-        </div>
-      </div>
-      <span class="line hide-for-small"></span>
-    </div>
-    <!--End Timeline-->
+    </section>
 
-
-    <!-- Begin Calander -->
-    <div class="row calendar">
-      <div class=" large-10 columns">
-
-        <table class="calendar">
-
-          <thead>
-            <tr>
-              <th width="300">Sun</th>
-              <th width="300">Mon</th>
-              <th width="300">Tue</th>
-              <th width="300">Wed</th>
-              <th width="300">Thu</th>
-              <th width="300">Fri</th>
-              <th width="300">Sat</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <td class="inactive">
-                <div>
-                  <span class="day">30</span>
-                </div>
-              </td>
-              <td class="inactive">
-                <div>
-                  <span class="day">31</span>
-                </div>
-              </td>
-              <td class="inactive">
-                <div>
-                  <span class="day">1</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">2</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">3</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">4</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">5</span>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>
-                  <span class="day">6</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">7</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">8</span>
-                  <span class="event yellow">Election Day:BTECH is closed!</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">9</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">10</span>
-                  <span class="event blue">Marking Period 1 Ends</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">11</span>
-                  <span class="event yellow">Veterans Day:Both BTECH and QCC are closed.</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">12</span>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>
-                  <span class="day">13</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">14</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">15</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">16</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">17</span>
-                  <span class="event green">Student Lead Confrences!!</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">18</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">19</span>
-                  </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>
-                  <span class="day">20</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">21</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">22</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">23</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">24</span>
-                  <span class="event yellow">Thanksgiving Recess: BTECH is closed.</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">25</span>
-                  <span class="event yellow">Thanksgiving Recess: BTECH is closed.</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">26</span>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>
-                  <span class="day">27</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">28</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">29</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">30</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span class="day">1</span>
-                </div>
-              </td>
-              <td class="inactive">
-                <div>
-                  <span class="day">2</span>
-                </div>
-              </td>
-              <td class="inactive">
-                <div>
-                  <span class="day">3</span>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-
-        </table>
-
+    <div class="row text-center">
+      <div class="small-12 columns">
+        <h1>The Queen is their slave</h1>
+        <h2 class="subheader">You met me at a very strange time in my life.</h2>
       </div>
     </div>
-    <!-- End Calander -->
+    <!-- End Hero -->
 
-<!--Begin Card-->
+<!--Begin InfoCard-->
 <div class="row">
-  <div class="medium-4 columns">
-    <div class="card">
-      <div class="image">
-        <img src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/355aeb89-4e9c-47fe-855b-78cd97d9439b?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&amp;Expires=1790927527&amp;response-content-disposition=attachment%3Bfilename%3D%2220160613_111634.jpg%22&amp;response-content-type=image%2Fjpeg&amp;Signature=eNNtlIzlqX5x5TueNoHnQozJuG8%3D">
-        <span class="title">Road Warrior</span>
+
+  <div class="medium-8 large-3 columns">
+    <div class="callout-card success radius">
+      <div class="card-label">
+        <div class="label-text">
+          BTECH
+        </div>
       </div>
-      <div class="content">
-        <p>I shall be telling this with a sigh	. Somewhere ages and ages hence:	 Two roads diverged in a wood, and I —	 I took the one less traveled by.	 And that has made all the difference.</p>
-      </div>
-      <div class="action">
-        <a href='#'>Where this leads</a>
-      </div>
-    </div>
-  </div>
-  <div class="medium-6 columns end">
-    <div class="card">
-      <div class="content">
-        <span class="title">Robert Frost</span>
-        <p>Two roads diverged in a yellow wood,	 And sorry I could not travel both	 And be one traveler, long I stood	 And looked down one as far as I could	. To where it bent in the undergrowth;</p>
-      </div>
-      <div class="action">
-        <a href='#'>This is a link</a>
-        <a href='#'>This is a link</a>
+      <div class="callout-card-content">
+        <h3 class="lead">About</h3>
+        <p>In a post-apocalyptic world, in which people fight to the death, Max teams up with a mysterious woman, Furiousa, to try and survive.</p>
       </div>
     </div>
   </div>
+
+  <div class="medium-8 large-3 columns">
+    <div class="callout-card primary">
+      <div class="card-label">
+        <div class="label-text">
+          BTECH
+        </div>
+      </div>
+      <div class="callout-card-content">
+        <h3 class="lead">News</h3>
+        <p>A continuation of the saga created by George Lucas set thirty years after Star Wars: Episode VI - Return of the Jedi.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="medium-8 large-3 columns">
+    <div class="callout-card secondary">
+      <div class="card-label">
+        <div class="label-text">
+          BTECH
+        </div>
+      </div>
+      <div class="callout-card-content">
+        <h3 class="lead">Terminator Genisys</h3>
+        <p>After finding himself in a new time-line, Kyle Reese teams up with John Connor's mother Sarah and an aging terminator to try and stop the one thing that the future fears, "Judgement Day".</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="medium-8 large-3 columns">
+    <div class="callout-card info">
+      <div class="card-label">
+        <div class="label-text">
+          BTECH
+        </div>
+      </div>
+      <div class="callout-card-content">
+        <h3 class="lead">Chappie</h3>
+        <p>In the near future, crime is patrolled by a mechanized police force. When one police droid, Chappie, is stolen and given new programming, he becomes the first robot with the ability to think and feel for himself.</p>
+      </div>
+    </div>
+  </div>
+
 </div>
 
-<!--End Card-->
+<!--End InfoCard-->
+
 
     <!-- Begin Footer -->
     <footer class="footer">
