End of Class 12.6.2016

--- a/website/site.html
+++ b/website/site.html
@@ -68,27 +68,21 @@
     </nav>
     <!-- End Nav -->
 
-    <!-- Begin Hero -->
+    <!-- Begin Hero-->
     <section class="hero">
       <div class="row">
         <div class="large-6 large-push-2 columns">
           <div class="circle-bg quote-1">
-            <p>I found freedom.<br> Losing all hope was freedom.</p>
+            <p>Be In!<br> Innovative<br> Intelligent<br>Incredible<br> Be BTECH</p>
           </div>
         </div>
         <div class="large-6 large-pull-2 columns">
           <div class="circle-bg quote-2">
-            <p>It's only after we've lost everything that we're free to do anything.</p>
+            <p>There Is No First Or Last In Learning; The Learned Is The First.</p>
           </div>
         </div>
       </div>
     </section>
-
-    <div class="row text-center">
-      <div class="small-12 columns">
-        <h1>The Queen is their slave</h1>
-        <h2 class="subheader">You met me at a very strange time in my life.</h2>
-      </div>
     </div>
     <!-- End Hero -->
 
@@ -131,7 +125,7 @@
         </div>
       </div>
       <div class="callout-card-content">
-        <h3 class="lead">Terminator Genisys</h3>
+        <h3 class="lead">Core Values</h3>
         <p>After finding himself in a new time-line, Kyle Reese teams up with John Connor's mother Sarah and an aging terminator to try and stop the one thing that the future fears, "Judgement Day".</p>
       </div>
     </div>
@@ -145,7 +139,7 @@
         </div>
       </div>
       <div class="callout-card-content">
-        <h3 class="lead">Chappie</h3>
+        <h3 class="lead">SAP and BTECH</h3>
         <p>In the near future, crime is patrolled by a mechanized police force. When one police droid, Chappie, is stolen and given new programming, he becomes the first robot with the ability to think and feel for himself.</p>
       </div>
     </div>
